maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:24: error: not found: value estDevantMur
    if(estDevantMur()){
       ^Escaper:34: error: not found: value estDevantMur
  while (!estDevantMur()){
          ^Escaper:42: error: not found: value estDevantMur
  if(estDevantMur()){
     ^